k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oasis-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oasis-backend
  template:
    metadata:
      labels:
        app: oasis-backend
    spec:
      containers:
        - name: backend
          image: aaronhenao/oasis-backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: oasis-backend
  ports:
    - port: 8080
      targetPort: 8080
