k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oasis-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oasis-frontend
  template:
    metadata:
      labels:
        app: oasis-frontend
    spec:
      containers:
        - name: frontend
          image: aaronhenao/oasis-frontend
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: oasis-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
